@@ -1,5 +1,11 @@
 2006-05-13  Tom Tromey  <tromey@redhat.com>
 
+	* sources.am, Makefile.in: Rebuilt.
+	* gnu/java/net/protocol/jar/Connection.java: Removed.
+	* java/net/JarURLConnection.java: Removed.
+
+2006-05-13  Tom Tromey  <tromey@redhat.com>
+
 	* include/java-interp.h (_Jv_InterpMethod::dump_object): Removed
 	declaration.
 
